--- a/shard.yml
+++ b/shard.yml
@@ -1,9 +1,9 @@
 name: clop
-version: 0.1.5
+version: 0.1.6
 
 authors:
    - Jun Makino <jmakno@people.kobe-u.ac.jp>
 
-crystal: 0.35.0
+crystal: ">=0.35.0"
 
 license: MIT
